# warship

./: CMakeLists.txt  README.md
DbEducationalDivisions/name/: educational.txt
_build/: CMakeCache.txt  Makefile  cmake_install.cmake  demo
demo/: main.cpp
examples/: demo.cpp
include/: DBeducational_divisions.h  DBhybrid.h  DBscientific_divisions.h  Divisions.h  Intruction.h  dop_function.h  educational_divisions.h  game_ship.h  intellegent_bot.h  scientific_divisions.h
sources/: DBeducational_divisions.cpp  DBscientific_divisions.cpp  Intruction.cpp  dop_function.cpp  educational_divisions.cpp  game_ship.cpp  scientific_divisions.cpp
tests/: tests.cpp
